第二页添加登录、注册、发表文章页面

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -199,7 +199,7 @@
                     <li class="menu-item menu-item-search"></li>
                     <li class="menu-item menu-item-search"></li>
 
-                    <li class="menu-item menu-item-search">
+                    <li class="menu-item menu-item-tags">
 
                         <a href="/login.html" class="popup-trigger">
 
@@ -210,7 +210,7 @@
                         </a>
                     </li>
 
-                    <li class="menu-item menu-item-search">
+                    <li class="menu-item menu-item-tags">
 
                         <a href="/signup.html" class="popup-trigger">
 
@@ -221,7 +221,7 @@
                         </a>
                     </li>
 
-                    <li class="menu-item menu-item-search">
+                    <li class="menu-item menu-item-tags">
 
                         <a href="/publish.jsp" class="popup-trigger">
 
